--- a/index.html
+++ b/index.html
@@ -451,50 +451,48 @@
 
         <main class="flex-grow pt-20 px-4 md:px-8 max-w-7xl mx-auto w-full">
 
-            <!-- UPDATE: Home Section Centered Vertically for Mobile -->
-            <section id="home" class="active-section min-h-[calc(100vh-5rem)] flex flex-col justify-center">
-                <!-- Home section modified to be compact and non-scrollable -->
-                <div class="grid md:grid-cols-2 gap-4 md:gap-10 items-center w-full">
-                    <div class="space-y-4 md:space-y-6 text-center md:text-left flex flex-col justify-center">
-                        <!-- Mobile Logo -->
-                        <div class="md:hidden flex justify-center shrink-0 mb-2">
+            <section id="home" class="active-section h-[calc(100vh-5rem)] flex flex-col justify-center overflow-hidden">
+                <!-- Home section modified for better centering on mobile -->
+                <div class="grid md:grid-cols-2 gap-4 md:gap-10 items-center h-full max-w-lg mx-auto md:max-w-none">
+                    <div class="flex flex-col justify-center items-center md:items-start h-full w-full space-y-6 md:space-y-8">
+                        <!-- Mobile Logo made LARGER and centered -->
+                        <div class="md:hidden flex justify-center shrink-0">
                             <img src="IAINU.jpg" alt="Class Logo Mobile" 
                                  class="w-48 h-48 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)]"
                                  onerror="this.style.display='none'">
                         </div>
 
-                        <div class="shrink-0">
+                        <div class="shrink-0 text-center md:text-left">
                             <h2 class="text-3xl md:text-6xl font-bold font-tech leading-tight">
                                 WELCOME TO <br>
                                 <span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-600">FACULTY TARBIYAH</span>
                             </h2>
-                            <p class="text-gray-400 leading-relaxed text-xs md:text-lg mt-2 md:mt-4 line-clamp-3 md:line-clamp-none px-2 md:px-0">
+                            <p class="text-gray-400 leading-relaxed text-xs md:text-lg mt-4 line-clamp-3 md:line-clamp-none max-w-md mx-auto md:mx-0">
                                 "Kami tidak hanya diajarkan cara mentransfer ilmu, tapi juga cara menanamkan adab. Karena ilmu tanpa adab seperti api tanpa kayu bakar."
                             </p>
                         </div>
 
-                        <!-- Buttons -->
-                        <div class="flex gap-4 pt-2 justify-center md:justify-start shrink-0 w-full px-2 md:px-0">
-                            <button onclick="switchTab('documentation')" class="flex-1 md:flex-none px-6 py-3 bg-red-700 hover:bg-red-600 rounded-xl text-white font-bold transition-all shadow-[0_0_15px_rgba(220,38,38,0.5)] text-sm md:text-base">
+                        <!-- Buttons with Bigger Mobile Styling -->
+                        <div class="flex gap-4 justify-center md:justify-start shrink-0 w-full md:w-auto">
+                            <button onclick="switchTab('documentation')" class="px-8 py-4 bg-red-700 hover:bg-red-600 rounded-xl text-white font-bold transition-all shadow-[0_0_15px_rgba(220,38,38,0.5)] text-lg md:text-base md:px-5 md:py-2 md:rounded-lg">
                                 Let's Go !!!
                             </button>
-                            <button onclick="switchTab('structure')" class="flex-1 md:flex-none px-6 py-3 border-2 border-gray-600 hover:border-red-500 hover:text-red-400 rounded-xl text-gray-300 font-bold transition-all text-sm md:text-base">
+                            <button onclick="switchTab('structure')" class="px-8 py-4 border-2 border-gray-600 hover:border-red-500 hover:text-red-400 rounded-xl text-gray-300 font-bold transition-all text-lg md:text-base md:px-5 md:py-2 md:rounded-lg md:border">
                                 Mahasiswa
                             </button>
                         </div>
                         
-                        <!-- Stats -->
-                        <div class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-800 shrink-0 w-full">
-                            <div>
-                                <h3 class="text-lg md:text-2xl font-bold text-white">24</h3>
+                        <div class="grid grid-cols-3 gap-8 border-t border-gray-800 pt-6 mt-2 shrink-0 w-full md:w-auto">
+                            <div class="text-center md:text-left">
+                                <h3 class="text-xl md:text-2xl font-bold text-white">24</h3>
                                 <p class="text-[10px] md:text-xs text-gray-500 uppercase tracking-wider">Siswa</p>
                             </div>
-                            <div>
-                                <h3 class="text-lg md:text-2xl font-bold text-white">6</h3>
+                            <div class="text-center md:text-left">
+                                <h3 class="text-xl md:text-2xl font-bold text-white">6</h3>
                                 <p class="text-[10px] md:text-xs text-gray-500 uppercase tracking-wider">Laki-laki</p>
                             </div>
-                            <div>
-                                <h3 class="text-lg md:text-2xl font-bold text-white">18</h3>
+                            <div class="text-center md:text-left">
+                                <h3 class="text-xl md:text-2xl font-bold text-white">18</h3>
                                 <p class="text-[10px] md:text-xs text-gray-500 uppercase tracking-wider">Perempuan</p>
                             </div>
                         </div>
@@ -540,8 +538,8 @@
                     <a href="https://pai-b-official.github.io/Structure-Class-PAI-B/" target="_blank" class="w-full group relative px-10 py-6 bg-gradient-to-r from-red-900 to-black overflow-hidden rounded-2xl border border-red-600/50 shadow-[0_0_30px_rgba(220,38,38,0.2)] hover:shadow-[0_0_50px_rgba(220,38,38,0.6)] transition-all duration-300 text-center transform hover:scale-105">
                         <div class="flex flex-col items-center gap-3 relative z-10">
                             <i class="fas fa-sitemap text-4xl text-red-400 group-hover:text-white transition-colors"></i>
-                            <span class="font-tech text-2xl font-bold text-white tracking-widest">ORGANIZATION PAI B</span>
-                            <span class="text-xs text-gray-400 uppercase tracking-wider">Klik untuk melihat struktur lengkap</span>
+                            <span class="font-tech text-2xl font-bold text-white tracking-widest">ORGANIZE PAI B</span>
+                            <span class="text-xs text-gray-400 uppercase tracking-wider">Klik untuk melihat struktur PAI B</span>
                         </div>
                         <div class="absolute inset-0 bg-red-600 opacity-0 group-hover:opacity-20 transition-opacity duration-300"></div>
                     </a>
