--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                         <!-- Mobile Logo made LARGER and centered -->
                         <div class="md:hidden flex justify-center shrink-0 mb-2">
                             <img src="IAINU.jpg" alt="Class Logo Mobile" 
-                                 class="w-40 h-40 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)]"
+                                 class="w-70 h-70 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)]"
                                  onerror="this.style.display='none'">
                         </div>
 
@@ -468,7 +468,7 @@
                                 <span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-600">FACULTY TARBIYAH</span>
                             </h2>
                             <p class="text-gray-400 leading-relaxed text-xs md:text-lg mt-4 line-clamp-3 md:line-clamp-none max-w-md mx-auto md:mx-0">
-                                "Kami tidak hanya diajarkan cara mentransfer ilmu, tapi juga cara menanamkan adab. Karena ilmu tanpa adab seperti api tanpa kayu bakar."
+                                "Dalam lingkungan pendidikan, seorang pendidik adalah tenaga profesional yang berfungsi menjembatani ajaran klasik dengan realita kehidupan modern yang dinamis. wajib memiliki kompetensi ganda, yaitu penguasaan materi yang mendalam serta keterampilan mengajar yang efektif."
                             </p>
                         </div>
 
@@ -1561,3 +1561,4 @@
     </script>
 </body>
 </html>
+
