--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                         <!-- Mobile Logo made LARGER and centered -->
                         <div class="md:hidden flex justify-center shrink-0 mb-2">
                             <img src="IAINU.jpg" alt="Class Logo Mobile" 
-                                 class="w-70 h-70 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)]"
+                                 class="w-60 h-60 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)]"
                                  onerror="this.style.display='none'">
                         </div>
 
@@ -502,7 +502,7 @@
                         <div class="flex justify-center mb-6">
                             <img src="IAINU.jpg" alt="Class Logo" 
                                  class="w-32 h-32 object-contain filter drop-shadow-[0_0_15px_rgba(220,38,38,0.5)] hover:scale-110 transition-transform duration-300"
-                                 onerror="this.onerror=null; this.src='https://cdn-icons-png.flaticon.com/512/2997/2997322.png';">
+                                 onerror="this.onerror=null; this.src='IAINU.jpg';">
                         </div>
 
                         <div class="glass-panel p-8 rounded-2xl transform rotate-3 hover:rotate-0 transition-all duration-500 border border-red-500/20 max-w-md">
@@ -1561,4 +1561,5 @@
     </script>
 </body>
 </html>
+
 
