--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                 <span class="text-transparent bg-clip-text bg-gradient-to-r from-red-500 to-orange-600">FACULTY TARBIYAH</span>
                             </h2>
                             <p class="text-gray-400 leading-relaxed text-xs md:text-lg mt-4 md:text-justify max-w-md mx-auto md:mx-0">
-                                "Dalam lingkungan pendidikan, seorang pendidik adalah tenaga profesional yang berfungsi menjembatani ajaran klasik dengan realita kehidupan modern yang dinamis. wajib memiliki kompetensi ganda, yaitu penguasaan materi yang mendalam serta keterampilan mengajar yang efektif."
+                                "Dalam lingkungan pendidikan, seorang pendidik adalah tenaga profesional berfungsi menjembatani ajaran klasik dengan realita kehidupan modern yang dinamis. wajib memiliki kompetensi ganda, yaitu penguasaan materi mendalam serta keterampilan mengajar yang efektif."
                             </p>
                         </div>
 
@@ -1466,3 +1466,4 @@
     </script>
 </body>
 </html>
+
